--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,13 +9,15 @@ body {
 	font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans",
 		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	font-size: 1.5rem;
-	background-color: #1e1e1e;
+
 	color: #c4c4c4;
 	user-select: none;
 	overflow: hidden;
+	background-color: #252526;
 }
 
 .room {
+	background-color: #1e1e1e;
 	border: 2px solid #c4c4c4;
 	border-radius: 10px;
 	margin: 1rem;
